# auth-test-task

./: README.md  docker-compose.yaml  main.py  pyproject.toml  seed_db.py
alembic/: env.py
alembic/versions/: 7ff9e90adeb5_init_user.py
src/Models/: User.py  base.py
src/api/: __init__.py
src/api/admin/: __init__.py  router.py
src/api/auth/: router.py
src/clients/: redis.py
src/config/: app.py  core.py  database.py  logging_config.py  redis.py  settings.py
src/di/: dependencies.py
src/exceptions/: custom_exceptions.py  handlers.py
src/repositories/: repository.py  user_repository.py
src/schemes/: mixin.py  pagination_filter.py  schemes.py
src/security/: jwt_service.py
src/services/: admin_service.py  auth_service.py
